--- a/csc105_exercise2_fruitlist/index.html
+++ b/csc105_exercise2_fruitlist/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="css/css-file.css">
 	<script type="text/javascript" src="js/js-file.js"></script>
 </head>
-<body>
+<body onload="loadFruits()">
     <input type="button" name="fav" id="addFav" onclick="myFunction()" value="Add Your Favorite!"><br>
     <p>List of my favorite fruits:</p>
-    <ul id="myList"></ul>
+    <ul id="fruits"></ul>
 </body>
 </html>
