--- a/csc105_exercise1_validation/index.html
+++ b/csc105_exercise1_validation/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Exercise 1</title>
 	<link rel="stylesheet" href="css/css-file.css">
 	<script type="text/javascript" src="js/js-file.js"></script>
 </head>
 <body>
     <form>
+        <h1>Exercise 1</h1>
         <label for="textInput">Enter a string:</label>
-        <input type="text" id="textInput" name="textInput" pattern="[A-Z].*" required>
-        <button type="button" onclick="checkFirstCharacter()">Check</button>
-        <p id="demo"></p>
+        <input type="text" id="textInput" name="textInput" pattern="([A-Z])\w+" required>
+        <input type="submit" onclick="checkFirstCharacter()">
     </form>      
 </body>
 </html>
